# price-history-website

./: README.md  pyproject.toml
PriceHistory/applications/Category/: admin.py  apps.py  models.py
PriceHistory/applications/Category/migrations/: 0001_initial.py  0002_newsubcategory.py  0003_alter_newsubcategory_table.py  0004_rename_newsubcategory_subcategory_and_more.py
PriceHistory/applications/Core/: apps.py  models.py
PriceHistory/applications/Core/migrations/: 0001_initial.py
PriceHistory/applications/Product/: admin.py  apps.py  models.py
PriceHistory/applications/Product/migrations/: 0001_initial.py
PriceHistory/config/: settings.py
Scrapy/grocery_stores/: items.py  loaders.py  middlewares.py  pipelines.py  settings.py
Scrapy/grocery_stores/spiders/: Testspider.py  _spidertools.py  common.py  novus.py  sp_novus.py
Scrapy/grocery_stores/spiders/parsers/: __init__.py  _rawpp.py  parser_novus.py
Scrapy/grocery_stores/spiders/selectors/: __init__.py  _base_selector.py  selector_novus.py  selector_silpo.py
Scrapy/grocery_stores/spiders/spidertools/: __init__.py  product.py  products.py  rawpp.py  rawproduct.py  utilityspider.py
Scrapy/grocery_stores/spiders/spidertools/loaders/: __init__.py  _base.py  novus_loaders.py
Scrapy/grocery_stores/spiders/spidertools/parsers/: __init__.py  parser_novus.py  parser_silpo.py
Scrapy/grocery_stores/spiders/spidertools/selectors/: __init__.py  _base_selector.py  novus.py  selector_silpo.py
Scrapy/grocery_stores/spiders/spidertools/start_urls/: __init__.py  novus.py
