[tool.poetry]
name = "price history website"
version = "0.1.0"
description = ""
authors = ["ArtemSerdechnyi <artem.serdechnyy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.9.0"
scrapy-splash = "^0.9.0"
scrapy-playwright = "^0.0.26"
playwright = "^1.34.0"
scrapy-selenium = "^0.0.7"
selenium = "^4.9.1"
requests-html = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
